--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,78 @@
-api==0.0.7
+appdirs==1.4.3
+asn1crypto==0.24.0
+automium==0.2.6
+automium-web==0.1.1
+bcrypt==3.1.4
 beautifulsoup4==4.6.3
 bs4==0.0.1
+buildozer==0.35.dev0
 certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
+ChatterBot==0.8.7
+chatterbot-corpus==1.1.2
+click==6.7
+colorama==0.3.9
+cryptography==2.3.1
+Cython==0.28.5
 Django==2.1.1
+django-ckeditor==5.1.1
+django-crispy-forms==1.6.1
 django-filter==2.0.0
 django-jalali-date==0.2.9
 django-money==0.14.3
 django-rest-auth==0.9.3
+django-webpack-loader==0.2.4
 djangorestframework==3.8.2
+docutils==0.14
 et-xmlfile==1.0.1
 ez-setup==0.9
+Fabric==1.10.2
+Flask==1.0.2
+future==0.16.0
 idna==2.7
+itsdangerous==0.24
 jdatetime==3.0.2
 jdcal==1.4
+Jinja2==2.10
+Kivy==1.10.1
+Kivy-Garden==0.1.4
+kivy.deps.glew==0.1.10
+kivy.deps.sdl2==0.1.18
+legacy==0.1.6
 Markdown==2.6.11
-nose==1.3.7
+MarkupSafe==1.0
+mathparse==0.1.1
+nltk==3.3
+numpy==1.15.0
+oauthlib==2.1.0
 openpyxl==2.5.6
+paramiko==2.4.1
+pexpect==4.6.0
 Pillow==5.2.0
 psycopg2==2.7.5
+ptyprocess==0.6.0
 py-moneyed==0.8.0
+pyasn1==0.4.4
+pycparser==2.18
+Pygments==2.2.0
+pymongo==3.7.1
+PyNaCl==1.2.1
+pyodbc==4.0.24
+pypiwin32==223
 python-dateutil==2.7.3
+python-for-android==0.6.0
+python-twitter==3.4.2
 pytz==2018.5
+pywin32==223
+PyYAML==3.13
+Quickstart==0.4
 requests==2.19.1
+requests-oauthlib==1.0.0
 restaurant==0.1.0
+serializers==0.2.4
 six==1.11.0
+SQLAlchemy==1.2.11
 urllib3==1.23
+virtualenv==16.0.0
+Werkzeug==0.14.1
